--- a/android-engineer.html
+++ b/android-engineer.html
@@ -67,11 +67,11 @@
 <p>Oct 14, 2019 ... We are a leading digital bank on a mission to disrupt the banking industry. We've 
 built an app with smart money management tools to help our customers live a?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang/jobs/1918818'>Job Application for Principal, Android Engineer (Delivery Device Service) at Coupang</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1918818'>Job Application for Principal, Android Engineer (Delivery Device Service) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4493868002'>Job Application for Android Engineer at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4493868002'>Job Application for Android Engineer at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -79,7 +79,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698315073-android-software-engineer-mobile'>CapTech Consulting Android Software Engineer - Mobile | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698315073-android-software-engineer-mobile'>CapTech Consulting Android Software Engineer - Mobile | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -99,7 +99,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489123002'>Job Application for Android Engineer - Customer Solutions at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489123002'>Job Application for Android Engineer - Customer Solutions at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -145,7 +145,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930260'>Job Application for Senior Android Engineer (Enterprise Security) at Pango Inc. </a></h5> 
+<h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930260'>Job Application for Senior Android Engineer (Enterprise Security) at Pango Inc. </a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -157,7 +157,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/?utm_source=dlvr.it&utm_medium=twitter'>Android Software Engineer - Permutive</a></h5> 
+<h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/?utm_source=dlvr.it&utm_medium=twitter'>Android Software Engineer - Permutive</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -190,7 +190,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4479866002'>Job Application for Senior Android Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4479866002'>Job Application for Senior Android Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -198,11 +198,11 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999697764733-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999697764733-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nerdery/job/oRYnbfw7'>Nerdery Careers - Android Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/nerdery/job/oRYnbfw7'>Nerdery Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -218,7 +218,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
+<h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -235,11 +235,11 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4489039002'>Job Application for Android Engineer at Samsung Research America</a></h5> 
+<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4489039002'>Job Application for Android Engineer at Samsung Research America</a></h5> 
 <p><span class="badge badge-light">Mountain View , CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/onefootball/jobs/1920667'>Job Application for Senior Android Engineer - AdTech at Onefootball</a></h5> 
+<h5><a href='https://boards.greenhouse.io/onefootball/jobs/1920667'>Job Application for Senior Android Engineer - AdTech at Onefootball</a></h5> 
 <p><span class="badge badge-light">Berlin  ?  Berlin</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -302,7 +302,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-isel-1900048?gh_jid=1900048'>Android Software Engineer  [Lisbon] - Careers | Talkdesk</a></h5> 
+<h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-isel-1900048?gh_jid=1900048'>Android Software Engineer  [Lisbon] - Careers | Talkdesk</a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -338,7 +338,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CAUnited States</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<h5><a href='https://intellectsoft.workable.com/j/40777FEDAC'>Intellectsoft - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intellectsoft.workable.com/j/40777FEDAC'>Intellectsoft - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv city, Ukraine Palo Alto</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -388,7 +388,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=o2JgbfwW&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=n2QE2MwP'>New Relic Careers - Senior Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=o2JgbfwW&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=n2QE2MwP'>New Relic Careers - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
@@ -426,7 +426,7 @@ mission to help parents teach financial literacy to kids.</p>
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -440,7 +440,7 @@ mission to help parents teach financial literacy to kids.</p>
 work on innovative mobile projects that would impact tens of millions of people's
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/kmdhhbk559fat3yi4ns71qer7o'>Senior Android Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/kmdhhbk559fat3yi4ns71qer7o'>Senior Android Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
