--- a/ios-developer.html
+++ b/ios-developer.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
+<h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/5kq8g19qwg39kpshpj3zadheuc'>Lead iOS Developer up to $200,000 + Remote | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/5kq8g19qwg39kpshpj3zadheuc'>Lead iOS Developer up to $200,000 + Remote | CardinalHire</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/startuptap/f4885ff4-9d2b-4627-8f7a-88347eba4852'>StartupTAP - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/startuptap/f4885ff4-9d2b-4627-8f7a-88347eba4852'>StartupTAP - iOS Developer</a></h5> 
 <p><span class="badge badge-light">El Segundo, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -137,7 +137,7 @@
 <p>Oct 6, 2019 ... As a Senior iOS Developer you will need to be: An expert in using Xcode, Git and 
 building continuous integration pipelines; Demonstrable mastery in the?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999697629039-ios-developer-senior-principal-senior-principal-position-'>Cermati.com IOS Developer (Senior, Principal, & Senior Principal Position) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999697629039-ios-developer-senior-principal-senior-principal-position-'>Cermati.com IOS Developer (Senior, Principal, & Senior Principal Position) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -183,11 +183,11 @@ vehicle?...</p>
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Apply online for the job of Backend Application Developer (Node.js) at Semios.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/a64sumbjsm8othgbr1bwuh1yyr'>Senior iOS App Developer | Strategic Employment</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/a64sumbjsm8othgbr1bwuh1yyr'>Senior iOS App Developer | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Irvine, CA  Irvine</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -225,13 +225,13 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://georgelabs.recruitee.com/o/ios-developer-fmd-for-george'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://georgelabs.recruitee.com/o/ios-developer-fmd-for-george'>
       iOS Developer (f/m/d) for George - George Labs GmbH
     </a></h5> 
 <p><span class="badge badge-light">Vienna</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/dynamicsignal/job/oFTfbfwI'>Dynamic Signal Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/dynamicsignal/job/oFTfbfwI'>Dynamic Signal Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">San Bruno, California</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
