--- a/android-developer.html
+++ b/android-developer.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698354961-internship-mobile-android-developer'>Netatmo INTERNSHIP - Mobile Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698354961-internship-mobile-android-developer'>Netatmo INTERNSHIP - Mobile Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/Fc8A2aKTsy/Android-Developer'>Android Developer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/Fc8A2aKTsy/Android-Developer'>Android Developer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -154,7 +154,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">Vietnam Vietnam  Singapore Vietnam</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
+<h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
       Android Developer - Supermercato24
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -180,7 +180,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/homeadvisorangieslist/jobs/4490279002'>Job Application for Android Developer at HomeAdvisor & Angie's List</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/homeadvisorangieslist/jobs/4490279002'>Job Application for Android Developer at HomeAdvisor & Angie's List</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -322,7 +322,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA  Mountain View San Francisco</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -367,7 +367,7 @@ Android Developer (f/m/d) at diconium in Berlin | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/android/jobs/8325-experienced-android-application-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8325-experienced-android-application-developer'>
 Experienced Android Application Developer at Yor Labs Inc in Portland | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -446,7 +446,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">South Africa</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DatamaticsGlobalServicesInc/743999697137305-android-developer'>Datamatics Global Services Inc Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DatamaticsGlobalServicesInc/743999697137305-android-developer'>Datamatics Global Services Inc Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -475,7 +475,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://cellular.join.com/jobs/422756-android-developer-m-w-d'>Job @ CELLULAR (Hamburg): Android Developer (m/w/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cellular.join.com/jobs/422756-android-developer-m-w-d'>Job @ CELLULAR (Hamburg): Android Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg, Deutschland</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
