--- a/deep-learning.html
+++ b/deep-learning.html
@@ -106,7 +106,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999697840026-senior-deep-learning-software-engineer'>Run:AI Senior Deep-Learning Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999697840026-senior-deep-learning-software-engineer'>Run:AI Senior Deep-Learning Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Tel Aviv-Yafo, Israel</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -130,7 +130,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -163,7 +163,7 @@ the center of our core mission, building state of the art technologies. You will
 <p>Oct 7, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills at Crisalix.</p>
 <hr/>
-<h5><a href='https://recruit.ucsc.edu/JPF00769'>Computer Science and Engineering: Assistant Professor in Deep Learning (Initial Review 1/07/20) (JPF00769) - UCSC Academic Recruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ucsc.edu/JPF00769'>Computer Science and Engineering: Assistant Professor in Deep Learning (Initial Review 1/07/20) (JPF00769) - UCSC Academic Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
@@ -179,7 +179,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco, California</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -216,7 +216,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696343996-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696343996-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -248,7 +248,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/FDE4B00B0B'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/FDE4B00B0B'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -369,7 +369,7 @@ and GPUs?...</p>
 <p>Sep 5, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills at Crisalix.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Voxelcloud/743999681864785-deep-learning-scientist'>Voxelcloud Deep Learning Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Voxelcloud/743999681864785-deep-learning-scientist'>Voxelcloud Deep Learning Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
@@ -410,7 +410,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/C09F877A45'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/C09F877A45'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
